# rag-from-scratch

./: README.md  app.py  chat_app.py  docker_run.sh  pyproject.toml  requirements.txt  utils.py
configs/: config.yaml
llms/: hf_api.py
rag-systems/llms/: hf_api.py
rag-systems/utils/: utils.py
rag_systems/evaluation/: __init__.py  qa_critic.py  qa_generator.py
rag_systems/llms/: hf_api.py  hf_lammaindex.py  ollama_api.py
rag_systems/rags/: dataset.py
rag_systems/utils/: initializer.py  prompt_templates.py  utils.py
scripts/: docker_run.sh  indent.sh
